[gd_scene load_steps=3 format=3 uid="uid://cg6w6dq50qp4"]

[ext_resource type="Script" path="res://assets/scripts/playlists.gd" id="1_b67ml"]
[ext_resource type="Theme" uid="uid://ccxegmojnss2" path="res://resources/themes/30font.tres" id="3_ktpu0"]

[node name="playlists" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b67ml")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -485.0
offset_top = -44.0
offset_right = 485.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="buttonPlaylists" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ktpu0")

[node name="ScrollContainer2" type="ScrollContainer" parent="buttonPlaylists"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.5
offset_right = 144.5
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="buttonPlaylists/ScrollContainer2"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="buttonPlaylists/ScrollContainer2/VBoxContainer"]
layout_mode = 2
placeholder_text = "add another folder"
expand_to_text_length = true

[node name="close" type="Button" parent="buttonPlaylists/ScrollContainer2/VBoxContainer"]
layout_mode = 2
text = "close"

[node name="selectPlaylist" type="Button" parent="buttonPlaylists"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "select playlist"

[node name="closeScreen" type="Button" parent="."]
layout_mode = 1
offset_right = 81.0
offset_bottom = 50.0
theme = ExtResource("3_ktpu0")
text = "close"

[connection signal="text_submitted" from="buttonPlaylists/ScrollContainer2/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="buttonPlaylists/ScrollContainer2/VBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="buttonPlaylists/selectPlaylist" to="." method="_on_select_playlist_pressed"]
[connection signal="pressed" from="closeScreen" to="." method="_on_close_screen_pressed"]
